rules/exposure-to-internet-via-istio-ingress/test/failed_with_istiogw/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx    # Should match your deployment's labels
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
