rules/exposure-to-internet-via-istio-ingress/test/failed_with_istiogw/input/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx   # This should match your service name
        port:
          number: 80
